# avatar-renderer-mcp

./: .gitattributes  .gitignore  CLAUDE.md  COLAB_SETUP.md  Dockerfile  LAUNCHER_README.md  LICENSE  Makefile  README.md  assets.py  demo.ipynb  demo.py  demo_avatars.py  demo_colab.ipynb  demo_colab_premium.ipynb  demo_tts.py  launcher.py  mcp-tool.json  pyproject.toml  requirements.txt
.github/workflows/: check-generation.yml  local-smoke.yml  sync-hf-space.yml
app/: __init__.py  api.py  auth_hf.py  compliance.py  engines.py  lipsync.py  mcp_server.py  modes.py  pipeline.py  quality.py  render.py  security.py  settings.py  simple_render.py  users_db.py  viseme_align.py  wav2lip_compat.py  worker.py
app/enhancements/: __init__.py  cosyvoice_tts.py  emotion_expressions.py  eye_gaze_blink.py  gaussian_splatting.py  gesture_animation.py  hallo3_cinematic.py  latentsync_lipsync.py  liveportrait_driver.py  mouth_artifact_cleanup.py  musetalk_lipsync.py  viseme_guided.py
app/tts/: __init__.py  chatterbox_client.py  chatterbox_server.py
charts/avatar-renderer/: Chart.yaml  values.yaml
charts/avatar-renderer/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  pvc.yaml  service.yaml
ci/: github-actions.yml  tekton-build.yaml
colab/: Avatar_Renderer_GPU_Server.ipynb  __init__.py  colab_gpu_server.py  render_one.py
docs/: 00_overview.md  02_mcp_integration.md  AUTH_MULTITENANCY.md  AVATAR_IMPROVEMENTS_ANALYSIS.md  COLAB_GPU_TESTING.md  ENHANCEMENTS.md  MULTI_ENGINE_FEASIBILITY.md  NATURALNESS_DESIGN.md  QUALITY_MODES.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md  noted.md
external_deps/SadTalker/src/face3d/util/: preprocess.py
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: HfTokenConnect.tsx  HuggingFaceLogin.tsx
frontend/lib/: api.ts  auth.tsx  gradioClient.ts  hfToken.ts
gui/: README.md  __init__.py  __main__.py  avatar_gui.py
hf/: Dockerfile  README.md  README_GPU_DEPLOY.md  README_HF_AUTH.md  start.sh
hf/static/: index.html
hf/static/css/: styles.css
hf/static/js/: app.js
k8s/: autoscale.yaml  deployment.yaml  service.yaml
launcher/: README.md  __init__.py  __main__.py  app.py
launcher/web/: index.html
launcher/web/css/: styles.css
launcher/web/js/: app.js
notebooks/: 01_fomm_diff2lip_demo.ipynb  02_finetune_diff2lip.ipynb
patches/: README.md
patches/fomm/: fomm_wrapper.py
scripts/: benchmark.py  claude_colab_client.sh  clone_models.sh  colab_gpu_setup.sh  comparison_report.py  cos_utils.py  download_enhancements.sh  download_legacy.sh  download_models.py  download_models.sh  download_models_ci.sh  generate_web_demo_audio.py  healthcheck.sh  identify_model.py  regen_comparison.sh  regen_comparison_colab.sh  test_pipeline.py  verify_installation.py  verify_setup.py
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
tests/: __init__.py  conftest.py  test_auth.py  test_engines.py  test_enhancements.py  test_health.py  test_mcp_stdio.py  test_pipeline.py  test_production.py  test_render_api.py  test_wav2lip_compat.py  tk_test.py  tts_test.py  tts_test_cli.py
zerogpu/: README.md  app.py  requirements.txt  space_app.py
