# [project] section for PEP 621
[project]
name = "avatar-renderer-mcp"
version = "0.1.0"
description = "Avatar renderer: FOMM + Diff2Lip + Wav2Lip pipeline with MCP STDIO support"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ruslan Magana Vsevolodovna", email = "contact@ruslanmv.com" },
]
requires-python = ">=3.11"
dependencies = [
    # Web framework & server
    "fastapi==0.116.1",
    "uvicorn[standard]==0.23.2",

    # Task queue
    "celery==5.5.3",
    "redis==6.2.0",

    # Core ML libraries
    "torch==2.6.0",
    "torchvision==0.21.0",
    "diffusers==0.20.2",
    "transformers==4.35.0",
    "tokenizers==0.21.2",
    "huggingface-hub==0.33.4",
    "safetensors==0.5.3",

    # Face enhancement
    "gfpgan==1.3.8",

    # Networking & cloud
    "requests==2.31.0",
    "boto3==1.26.160",
    "kafka-python==2.0.2",

    # Utilities
    "python-dotenv==1.0.0",
    "pydantic>=2.11.1,<3.0",
    "pydantic-settings>=2.10.1,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "black==24.1.0",
    "flake8==6.1.0",
    "pre-commit==3.4.0",
]

[project.urls]
Homepage = "https://github.com/ruslanmv/avatar-renderer-mcp"


# [tool.poetry] section for Poetry-specific configuration
[tool.poetry]
name = "avatar-renderer-mcp"
version = "0.1.0"
description = "Avatar renderer: FOMM + Diff2Lip + Wav2Lip pipeline with MCP STDIO support"
authors = ["Ruslan Magana Vsevolodovna <contact@ruslanmv.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "app" }]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"

# Web framework & server
fastapi = "0.116.1"
uvicorn = { version = "0.23.2", extras = ["standard"] }

# Task queue
celery = "5.5.3"
redis = "4.7.0"

# Core ML libraries
torch = { version = "2.6.0+cu124", source = "pytorch" }
torchvision = { version = "0.21.0+cu124", source = "pytorch" }
diffusers = "0.20.2"
transformers = "4.35.0"
tokenizers = "0.14.1"
huggingface-hub = "0.17.3"
safetensors = "0.3.1"

# Face enhancement
gfpgan = "2.3.0"

# Networking & cloud
requests = "2.31.0"
boto3 = "1.26.160"
kafka-python = "2.0.2"

# Utilities
python-dotenv = "1.0.0"
pydantic = "^2.11.1"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
black = "24.1.0"
flake8 = "6.1.0"
pre-commit = "3.4.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
